CCompleting the home page.

--- a/home_page.html
+++ b/home_page.html
@@ -8,5 +8,14 @@
 <body>
     <h2>Hello there </h2>
     <h3>This is the home page</h3>
+    <br>
+    <h3>NEW Learning list</h3>
+    <ul>
+        <li>Web scrapping</li>
+        <li>Time in python</li>
+        <li>Django</li>
+        <li>Flask</li>
+        <li>Working with pandas.</li>
+    </ul>
 </body>
 </html>
